Add toggle menu function

--- a/index.html
+++ b/index.html
@@ -191,6 +191,10 @@ document.addEventListener('DOMContentLoaded', function () {
     hamburger.classList.toggle('active');
   });
 });
+  function toggleMenu() {
+            var el = document.querySelector('.hamburger');
+            if (el) el.classList.toggle('open');
+        }
 </script>
 </body>
 
