--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <button class="home-button" onclick="scrollToTop()">🏠 Home</button>
-<div class="custom-cursor"></div>
+  <div class="custom-cursor"></div>
 
   <div class="loadwall">
     <div class="loader"></div>
@@ -18,17 +19,17 @@
   <nav class="nav">
     <div class="logo">LernW</div>
     <div class="hamburger" onclick="toggleMenu()">
-    <div class="bar"></div>
-    <div class="bar"></div>
-    <div class="bar"></div>
-  </div>
-   <ul id="nav-links">
-  <li><a href="index.html">Home</a></li>
-  <li><a href="course.html">Courses</a></li>
-  <li><a href="#about">About</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="login.html">Login</a></li>
-</ul>
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+    </div>
+    <ul id="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="course.html">Courses</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="login.html">Login</a></li>
+    </ul>
 
   </nav>
 
@@ -44,7 +45,8 @@
       <div class="card">
         <img src="https://source.unsplash.com/400x250/?frontend" alt="">
         <h3>Frontend Engineering</h3>
-<p>Hands-on learning for tech-forward careers—start building today.</p>      </div>
+        <p>Hands-on learning for tech-forward careers—start building today.</p>
+      </div>
       <div class="card">
         <img src="https://source.unsplash.com/400x250/?backend" alt="">
         <h3>Backend & APIs</h3>
@@ -110,64 +112,65 @@
       </div>
     </div>
   </section>
-<section class="section contact-section" id="contact">
-  <h2>Contact Us</h2>
-  <p style="text-align: center; max-width: 700px; margin: 0 auto 40px; color: #444;">
-    Have questions, feedback, or partnership opportunities? We'd love to hear from you.
-  </p>
-  <form class="contact-form">
-    <div class="form-group">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-    </div>
-    <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-    <button type="submit">Send Message</button>
-  </form>
-</section>
+  <section class="section contact-section" id="contact">
+    <h2>Contact Us</h2>
+    <p style="text-align: center; max-width: 700px; margin: 0 auto 40px; color: #444;">
+      Have questions, feedback, or partnership opportunities? We'd love to hear from you.
+    </p>
+    <form class="contact-form">
+      <div class="form-group">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="email" placeholder="Your Email" required>
+      </div>
+      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
 
 
   <footer class="footer">
-  <div class="footer-content">
-    <div class="footer-left">
-      <h3>LernW</h3>
-      <p>Empowering learners with high-quality, accessible education in tech, design, and innovation.</p>
-    </div>
+    <div class="footer-content">
+      <div class="footer-left">
+        <h3>LernW</h3>
+        <p>Empowering learners with high-quality, accessible education in tech, design, and innovation.</p>
+      </div>
 
-    <div class="footer-links">
-      <h4>Quick Links</h4>
-      <ul>
-        <li><a href="course.html">Courses</a></li>
-        <li><a href="signup.html">Signup</a></li>
-        <li><a href="login.html">Login</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </div>
+      <div class="footer-links">
+        <h4>Quick Links</h4>
+        <ul>
+          <li><a href="course.html">Courses</a></li>
+          <li><a href="signup.html">Signup</a></li>
+          <li><a href="login.html">Login</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
 
-    <div class="footer-social">
-      <h4>Follow Us</h4>
-      <div class="social-icons">
-        <a href="https://www.facebook.com/people/Prabhu-Shankar-Mund/pfbid02Ztcq7koaFcpx6xFacpD9t6jchUuNVhScMYJfMo9T3iciXSqpNDztCPipKCHBrQXXl/" target="_blank">
-          <img src="https://cdn-icons-png.flaticon.com/32/733/733547.png" alt="Facebook" width="24">
-        </a>
-        <a href="https://x.com" target="_blank">
-          <img src="https://cdn-icons-png.flaticon.com/512/5968/5968958.png" alt="X (Twitter)" width="24">
-        </a>
-        <a href="https://www.instagram.com/raj___mund/" target="_blank">
-          <img src="https://cdn-icons-png.flaticon.com/24/733/733558.png" alt="Instagram" width="24">
-        </a>
-        <a href="https://linkedin.com" target="_blank">
-          <img src="https://cdn-icons-png.flaticon.com/24/733/733561.png" alt="LinkedIn" width="24">
-        </a>
+      <div class="footer-social">
+        <h4>Follow Us</h4>
+        <div class="social-icons">
+          <a href="https://www.facebook.com/people/Prabhu-Shankar-Mund/pfbid02Ztcq7koaFcpx6xFacpD9t6jchUuNVhScMYJfMo9T3iciXSqpNDztCPipKCHBrQXXl/"
+            target="_blank">
+            <img src="https://cdn-icons-png.flaticon.com/32/733/733547.png" alt="Facebook" width="24">
+          </a>
+          <a href="https://x.com" target="_blank">
+            <img src="https://cdn-icons-png.flaticon.com/512/5968/5968958.png" alt="X (Twitter)" width="24">
+          </a>
+          <a href="https://www.instagram.com/raj___mund/" target="_blank">
+            <img src="https://cdn-icons-png.flaticon.com/24/733/733558.png" alt="Instagram" width="24">
+          </a>
+          <a href="https://linkedin.com" target="_blank">
+            <img src="https://cdn-icons-png.flaticon.com/24/733/733561.png" alt="LinkedIn" width="24">
+          </a>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="footer-bottom">
-    <p>Thank you for visiting LernW</p>
-  </div>
-</footer>
-<script src="script.js"></script>
+    <div class="footer-bottom">
+      <p>Thank you for visiting LernW</p>
+    </div>
+  </footer>
+  <script src="script.js"></script>
 </body>
 
 </html>
