--- a/course.html
+++ b/course.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LernW | Courses</title>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
     body {
       font-family: 'Outfit', sans-serif;
@@ -33,7 +38,7 @@
       border: none;
       border-radius: 50px;
       font-size: 1rem;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
     }
 
     .courses {
@@ -50,7 +55,7 @@
       backdrop-filter: blur(10px);
       border-radius: 20px;
       padding: 20px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
       cursor: pointer;
       transition: transform 0.3s ease;
     }
@@ -67,13 +72,15 @@
 
     .modal {
       position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
       display: none;
       align-items: center;
       justify-content: center;
       backdrop-filter: blur(15px);
-      background-color: rgba(0,0,0,0.4);
+      background-color: rgba(0, 0, 0, 0.4);
       z-index: 1000;
     }
 
@@ -85,7 +92,7 @@
       width: 90%;
       max-height: 80vh;
       overflow-y: auto;
-      box-shadow: 0 20px 60px rgba(0,0,0,0.2);
+      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.2);
       animation: fadeIn 0.4s ease;
       scroll-behavior: smooth;
     }
@@ -117,34 +124,42 @@
     }
 
     @keyframes fadeIn {
-      from { transform: scale(0.8); opacity: 0; }
-      to { transform: scale(1); opacity: 1; }
+      from {
+        transform: scale(0.8);
+        opacity: 0;
+      }
+
+      to {
+        transform: scale(1);
+        opacity: 1;
+      }
     }
+
     .home-button {
-  position: fixed;
-  bottom: 30px;
-  right: 30px;
-  background-color: #2c93f3;
-  color: #fff;
-  border: none;
-  border-radius: 50px;
-  padding: 12px 20px;
-  font-size: 1rem;
-  cursor: pointer;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-  transition: all 0.3s ease;
-  z-index: 1000;
-}
+      position: fixed;
+      bottom: 30px;
+      right: 30px;
+      background-color: #2c93f3;
+      color: #fff;
+      border: none;
+      border-radius: 50px;
+      padding: 12px 20px;
+      font-size: 1rem;
+      cursor: pointer;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+      transition: all 0.3s ease;
+      z-index: 1000;
+    }
 
-.home-button:hover {
-  background-color: #1a6edb;
-  transform: scale(1.05);
-}
-
+    .home-button:hover {
+      background-color: #1a6edb;
+      transform: scale(1.05);
+    }
   </style>
 </head>
+
 <body>
-<button class="home-button" onclick="location.href='index.html'">🏠 Home</button>
+  <button class="home-button" onclick="location.href='index.html'">🏠 Home</button>
 
   <h1>Our Courses</h1>
 
@@ -167,38 +182,38 @@
 
   <script>
     const courses = [
-  { title: "Frontend Development", desc: "HTML, CSS, JavaScript, React, UI/UX best practices.", duration: "3 Months", fee: "4999", req: "Basic computer knowledge" },
-  { title: "Backend Development", desc: "Node.js, Express, MongoDB, APIs, security, and auth.", duration: "3.5 Months", fee: "5499", req: "JavaScript fundamentals" },
-  { title: "Full Stack Development", desc: "Frontend + backend with deployment and Git.", duration: "6 Months", fee: "8999", req: "HTML, CSS, JS" },
-  { title: "UI/UX Design", desc: "Figma, Adobe XD, wireframes, prototyping & usability.", duration: "2 Months", fee: "3999", req: "Creative mindset" },
-  { title: "Data Science", desc: "Python, Pandas, Machine Learning, and data analysis.", duration: "4 Months", fee: "5999", req: "Basic math & Python" },
-  { title: "AI & Machine Learning", desc: "AI concepts, neural networks, GPT, real-world ML models.", duration: "5 Months", fee: "6999", req: "Math, Python, Data Science" },
-  { title: "Deep Learning", desc: "CNNs, RNNs, PyTorch, TensorFlow, and image/audio models.", duration: "4 Months", fee: "7999", req: "Machine Learning basics" },
-  { title: "Flutter & Dart", desc: "Build cross-platform mobile apps with Flutter.", duration: "3 Months", fee: "4999", req: "OOP basics" },
-  { title: "React Native", desc: "Create native mobile apps using React and JavaScript.", duration: "3.5 Months", fee: "5499", req: "JavaScript" },
-  { title: "iOS Development", desc: "Swift, SwiftUI, Xcode, and Apple APIs.", duration: "4 Months", fee: "6999", req: "Mac system preferred" },
-  { title: "Android Development", desc: "Java/Kotlin, Android Studio, UI layouts, and backend APIs.", duration: "4 Months", fee: "6499", req: "Java basics" },
-  { title: "C++ & DSA", desc: "Master C++, STL, sorting, recursion, graphs, and trees.", duration: "3 Months", fee: "4499", req: "Basic programming knowledge" },
-  { title: "Python Programming", desc: "From basics to OOP and real-world scripting.", duration: "2 Months", fee: "3999", req: "None" },
-  { title: "Java Programming", desc: "Core Java, OOP concepts, and desktop applications.", duration: "2.5 Months", fee: "4499", req: "Basic programming" },
-  { title: "Cloud Computing", desc: "AWS, Azure, GCP services with real-world projects.", duration: "3 Months", fee: "5999", req: "IT/networking basics" },
-  { title: "DevOps", desc: "CI/CD, Docker, Kubernetes, Jenkins, GitHub Actions.", duration: "3 Months", fee: "6999", req: "Linux, Git" },
-  { title: "Cybersecurity Basics", desc: "Understand threats, vulnerabilities, and protection strategies.", duration: "2.5 Months", fee: "5999", req: "Networking knowledge" },
-  { title: "Ethical Hacking", desc: "Kali Linux, Nmap, Metasploit, and penetration testing.", duration: "3 Months", fee: "6499", req: "Cybersecurity basics" },
-  { title: "SQL & Databases", desc: "MySQL, PostgreSQL, ER modeling, joins, transactions.", duration: "2 Months", fee: "3999", req: "Basic programming" },
-  { title: "NoSQL & MongoDB", desc: "MongoDB, aggregation pipelines, schema design.", duration: "1.5 Months", fee: "3499", req: "JSON & JavaScript basics" },
-  { title: "Blockchain Development", desc: "Ethereum, Solidity, smart contracts, Web3 DApps.", duration: "4 Months", fee: "6999", req: "JavaScript & Crypto basics" },
-  { title: "Web3 Fundamentals", desc: "Intro to decentralized web, wallets, and token standards.", duration: "1.5 Months", fee: "2999", req: "Blockchain basics" },
-  { title: "Game Development", desc: "Unity, C#, physics, assets, and game publishing.", duration: "4 Months", fee: "7499", req: "C# / Unity basics" },
-  { title: "3D Animation", desc: "Blender, Maya, modeling, rigging, and rendering.", duration: "4 Months", fee: "7999", req: "Creative interest" },
-  { title: "AR/VR Development", desc: "Unity XR, Oculus SDK, WebXR APIs.", duration: "4.5 Months", fee: "7999", req: "Basic game dev" },
-  { title: "Graphic Design", desc: "Photoshop, Illustrator, Canva, branding, and posters.", duration: "2 Months", fee: "2999", req: "Creative mindset" },
-  { title: "Digital Marketing", desc: "SEO, SEM, Google Ads, Analytics, and campaigns.", duration: "3 Months", fee: "4999", req: "None" },
-  { title: "Content Writing", desc: "Blogging, SEO content, editing, and AI writing tools.", duration: "1.5 Months", fee: "2999", req: "English fluency" },
-  { title: "AI Art Generation", desc: "Create visuals using Midjourney, DALL·E, prompts, and upscaling.", duration: "1 Month", fee: "2499", req: "Creative curiosity" },
-  { title: "Prompt Engineering", desc: "Crafting prompts for ChatGPT, DALL·E, Claude, and AI tools.", duration: "1 Month", fee: "1999", req: "No prerequisites" },
-  { title: "Technical Writing", desc: "Write manuals, API docs, and product guides professionally.", duration: "1.5 Months", fee: "3499", req: "Writing skills" }
-];
+      { title: "Frontend Development", desc: "HTML, CSS, JavaScript, React, UI/UX best practices.", duration: "3 Months", fee: "4999", req: "Basic computer knowledge" },
+      { title: "Backend Development", desc: "Node.js, Express, MongoDB, APIs, security, and auth.", duration: "3.5 Months", fee: "5499", req: "JavaScript fundamentals" },
+      { title: "Full Stack Development", desc: "Frontend + backend with deployment and Git.", duration: "6 Months", fee: "8999", req: "HTML, CSS, JS" },
+      { title: "UI/UX Design", desc: "Figma, Adobe XD, wireframes, prototyping & usability.", duration: "2 Months", fee: "3999", req: "Creative mindset" },
+      { title: "Data Science", desc: "Python, Pandas, Machine Learning, and data analysis.", duration: "4 Months", fee: "5999", req: "Basic math & Python" },
+      { title: "AI & Machine Learning", desc: "AI concepts, neural networks, GPT, real-world ML models.", duration: "5 Months", fee: "6999", req: "Math, Python, Data Science" },
+      { title: "Deep Learning", desc: "CNNs, RNNs, PyTorch, TensorFlow, and image/audio models.", duration: "4 Months", fee: "7999", req: "Machine Learning basics" },
+      { title: "Flutter & Dart", desc: "Build cross-platform mobile apps with Flutter.", duration: "3 Months", fee: "4999", req: "OOP basics" },
+      { title: "React Native", desc: "Create native mobile apps using React and JavaScript.", duration: "3.5 Months", fee: "5499", req: "JavaScript" },
+      { title: "iOS Development", desc: "Swift, SwiftUI, Xcode, and Apple APIs.", duration: "4 Months", fee: "6999", req: "Mac system preferred" },
+      { title: "Android Development", desc: "Java/Kotlin, Android Studio, UI layouts, and backend APIs.", duration: "4 Months", fee: "6499", req: "Java basics" },
+      { title: "C++ & DSA", desc: "Master C++, STL, sorting, recursion, graphs, and trees.", duration: "3 Months", fee: "4499", req: "Basic programming knowledge" },
+      { title: "Python Programming", desc: "From basics to OOP and real-world scripting.", duration: "2 Months", fee: "3999", req: "None" },
+      { title: "Java Programming", desc: "Core Java, OOP concepts, and desktop applications.", duration: "2.5 Months", fee: "4499", req: "Basic programming" },
+      { title: "Cloud Computing", desc: "AWS, Azure, GCP services with real-world projects.", duration: "3 Months", fee: "5999", req: "IT/networking basics" },
+      { title: "DevOps", desc: "CI/CD, Docker, Kubernetes, Jenkins, GitHub Actions.", duration: "3 Months", fee: "6999", req: "Linux, Git" },
+      { title: "Cybersecurity Basics", desc: "Understand threats, vulnerabilities, and protection strategies.", duration: "2.5 Months", fee: "5999", req: "Networking knowledge" },
+      { title: "Ethical Hacking", desc: "Kali Linux, Nmap, Metasploit, and penetration testing.", duration: "3 Months", fee: "6499", req: "Cybersecurity basics" },
+      { title: "SQL & Databases", desc: "MySQL, PostgreSQL, ER modeling, joins, transactions.", duration: "2 Months", fee: "3999", req: "Basic programming" },
+      { title: "NoSQL & MongoDB", desc: "MongoDB, aggregation pipelines, schema design.", duration: "1.5 Months", fee: "3499", req: "JSON & JavaScript basics" },
+      { title: "Blockchain Development", desc: "Ethereum, Solidity, smart contracts, Web3 DApps.", duration: "4 Months", fee: "6999", req: "JavaScript & Crypto basics" },
+      { title: "Web3 Fundamentals", desc: "Intro to decentralized web, wallets, and token standards.", duration: "1.5 Months", fee: "2999", req: "Blockchain basics" },
+      { title: "Game Development", desc: "Unity, C#, physics, assets, and game publishing.", duration: "4 Months", fee: "7499", req: "C# / Unity basics" },
+      { title: "3D Animation", desc: "Blender, Maya, modeling, rigging, and rendering.", duration: "4 Months", fee: "7999", req: "Creative interest" },
+      { title: "AR/VR Development", desc: "Unity XR, Oculus SDK, WebXR APIs.", duration: "4.5 Months", fee: "7999", req: "Basic game dev" },
+      { title: "Graphic Design", desc: "Photoshop, Illustrator, Canva, branding, and posters.", duration: "2 Months", fee: "2999", req: "Creative mindset" },
+      { title: "Digital Marketing", desc: "SEO, SEM, Google Ads, Analytics, and campaigns.", duration: "3 Months", fee: "4999", req: "None" },
+      { title: "Content Writing", desc: "Blogging, SEO content, editing, and AI writing tools.", duration: "1.5 Months", fee: "2999", req: "English fluency" },
+      { title: "AI Art Generation", desc: "Create visuals using Midjourney, DALL·E, prompts, and upscaling.", duration: "1 Month", fee: "2499", req: "Creative curiosity" },
+      { title: "Prompt Engineering", desc: "Crafting prompts for ChatGPT, DALL·E, Claude, and AI tools.", duration: "1 Month", fee: "1999", req: "No prerequisites" },
+      { title: "Technical Writing", desc: "Write manuals, API docs, and product guides professionally.", duration: "1.5 Months", fee: "3499", req: "Writing skills" }
+    ];
 
 
     const courseList = document.getElementById("courseList");
@@ -240,4 +255,5 @@
   </script>
 
 </body>
+
 </html>
