--- a/signup.html
+++ b/signup.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Signup - LernW</title>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
@@ -29,7 +30,7 @@
       backdrop-filter: blur(16px);
       -webkit-backdrop-filter: blur(16px);
       border-radius: 20px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.15);
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
       border: 1px solid rgba(255, 255, 255, 0.3);
     }
 
@@ -46,7 +47,7 @@
       margin-bottom: 18px;
       border: none;
       border-radius: 10px;
-      background: rgba(255,255,255,0.7);
+      background: rgba(255, 255, 255, 0.7);
       font-size: 1rem;
       color: #333;
     }
@@ -86,31 +87,32 @@
       text-decoration: none;
       font-weight: 600;
     }
+
     .home-button {
-  position: fixed;
-  bottom: 30px;
-  right: 30px;
-  background-color: #415b72;
-  color: #fff;
-  border: none;
-  border-radius: 50px;
-  padding: 12px 20px;
-  font-size: 1rem;
-  cursor: pointer;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-  transition: all 0.3s ease;
-  z-index: 1000;
-}
+      position: fixed;
+      bottom: 30px;
+      right: 30px;
+      background-color: #415b72;
+      color: #fff;
+      border: none;
+      border-radius: 50px;
+      padding: 12px 20px;
+      font-size: 1rem;
+      cursor: pointer;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+      transition: all 0.3s ease;
+      z-index: 1000;
+    }
 
-.home-button:hover {
-  background-color: #1a6edb;
-  transform: scale(1.05);
-}
-
+    .home-button:hover {
+      background-color: #1a6edb;
+      transform: scale(1.05);
+    }
   </style>
 </head>
+
 <body>
-<button class="home-button" onclick="location.href='index.html'">🏠 Home</button>
+  <button class="home-button" onclick="location.href='index.html'">🏠 Home</button>
 
   <div class="signup-container">
     <h2>Create Your Account</h2>
@@ -124,4 +126,5 @@
     </form>
   </div>
 </body>
+
 </html>
