--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>NovaLearn - Ignite Your Future</title>
+<link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
@@ -19,7 +20,6 @@
   <nav class="nav">
 <div class="logo-wrap" aria-label="LernW logo">
   <svg class="logo" viewBox="0 0 460 80" preserveAspectRatio="xMinYMid meet" role="img">
-    <!-- defs: gradients + glow -->
     <defs>
       <linearGradient id="mainGrad" x1="0%" y1="0%" x2="100%" y2="0%">
         <stop offset="0%" stop-color="#264E86"/>
@@ -27,7 +27,6 @@
         <stop offset="100%" stop-color="#ca18ee"/>
       </linearGradient>
 
-      <!-- moving sweep (a soft white overlay) -->
       <linearGradient id="sweepGrad" x1="0" x2="1" y1="0" y2="0">
         <stop offset="0%" stop-color="rgba(255,255,255,0.06)"/>
         <stop offset="50%" stop-color="rgba(255,255,255,0.18)"/>
