--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>NovaLearn - Ignite Your Future</title>
-<link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
@@ -18,53 +18,53 @@
     <div class="loader"></div>
   </div>
   <nav class="nav">
-<div class="logo-wrap" aria-label="LernW logo">
-  <svg class="logo" viewBox="0 0 460 80" preserveAspectRatio="xMinYMid meet" role="img">
-    <defs>
-      <linearGradient id="mainGrad" x1="0%" y1="0%" x2="100%" y2="0%">
-        <stop offset="0%" stop-color="#264E86"/>
-        <stop offset="60%" stop-color="#3a6fb5"/>
-        <stop offset="100%" stop-color="#ca18ee"/>
-      </linearGradient>
+    <div class="logo-wrap" aria-label="LernW logo">
+      <svg class="logo" viewBox="0 0 460 80" preserveAspectRatio="xMinYMid meet" role="img">
+        <defs>
+          <linearGradient id="mainGrad" x1="0%" y1="0%" x2="100%" y2="0%">
+            <stop offset="0%" stop-color="#264E86" />
+            <stop offset="60%" stop-color="#3a6fb5" />
+            <stop offset="100%" stop-color="#ca18ee" />
+          </linearGradient>
 
-      <linearGradient id="sweepGrad" x1="0" x2="1" y1="0" y2="0">
-        <stop offset="0%" stop-color="rgba(255,255,255,0.06)"/>
-        <stop offset="50%" stop-color="rgba(255,255,255,0.18)"/>
-        <stop offset="100%" stop-color="rgba(255,255,255,0.06)"/>
-      </linearGradient>
+          <linearGradient id="sweepGrad" x1="0" x2="1" y1="0" y2="0">
+            <stop offset="0%" stop-color="rgba(255,255,255,0.06)" />
+            <stop offset="50%" stop-color="rgba(255,255,255,0.18)" />
+            <stop offset="100%" stop-color="rgba(255,255,255,0.06)" />
+          </linearGradient>
 
-      <radialGradient id="glow" cx="50%" cy="45%" r="50%">
-        <stop offset="0%" stop-color="#ca18ee" stop-opacity="0.95"/>
-        <stop offset="60%" stop-color="#3a6fb5" stop-opacity="0.25"/>
-        <stop offset="100%" stop-color="#264E86" stop-opacity="0.0"/>
-      </radialGradient>
-    </defs>
+          <radialGradient id="glow" cx="50%" cy="45%" r="50%">
+            <stop offset="0%" stop-color="#ca18ee" stop-opacity="0.95" />
+            <stop offset="60%" stop-color="#3a6fb5" stop-opacity="0.25" />
+            <stop offset="100%" stop-color="#264E86" stop-opacity="0.0" />
+          </radialGradient>
+        </defs>
 
-    <circle class="glow-circle" cx="140" cy="40" r="36" />
+        <circle class="glow-circle" cx="140" cy="40" r="36" />
 
-    <text class="brand-text" x="10" y="55">L</text>
+        <text class="brand-text" x="10" y="55">L</text>
 
-    
-    <g transform="translate(28,0)" aria-hidden="true">
-      <path id="eFill"
-            d="M78 40c0 18-15 32-32 32S14 58 14 40 29 8 46 8c9 0 17 3 23 8"
-            fill="none" stroke="none"/>
-      <path class="e-path" d="M78 40c0 18-15 32-32 32S14 58 14 40 29 8 46 8c9 0 17 3 23 8" />
-      <g class="fillGroup">
-        <circle cx="46" cy="40" r="18" fill="url(#mainGrad)" opacity="0.95"/>
-        <rect class="sweep" x="-60" y="22" width="120" height="36" fill="url(#sweepGrad)" style="mix-blend-mode:screen; opacity:.9; transform:translateX(-120%);"/>
-      </g>
 
-      <circle class="spark" cx="76" cy="25" r="4"/>
+        <g transform="translate(28,0)" aria-hidden="true">
+          <path id="eFill" d="M78 40c0 18-15 32-32 32S14 58 14 40 29 8 46 8c9 0 17 3 23 8" fill="none" stroke="none" />
+          <path class="e-path" d="M78 40c0 18-15 32-32 32S14 58 14 40 29 8 46 8c9 0 17 3 23 8" />
+          <g class="fillGroup">
+            <circle cx="46" cy="40" r="18" fill="url(#mainGrad)" opacity="0.95" />
+            <rect class="sweep" x="-60" y="22" width="120" height="36" fill="url(#sweepGrad)"
+              style="mix-blend-mode:screen; opacity:.9; transform:translateX(-120%);" />
+          </g>
 
-      <circle class="particle" cx="40" cy="18" r="3" style="animation-delay: .02s"/>
-      <circle class="particle" cx="54" cy="8"  r="2.6" style="animation-delay: .05s"/>
-      <circle class="particle" cx="70" cy="10" r="2" style="animation-delay: .08s"/>
-    </g>
+          <circle class="spark" cx="76" cy="25" r="4" />
 
-    <text class="brand-text" x="150" y="55">rnW</text>
-  </svg>
-</div>    <div class="hamburger" onclick="toggleMenu()">
+          <circle class="particle" cx="40" cy="18" r="3" style="animation-delay: .02s" />
+          <circle class="particle" cx="54" cy="8" r="2.6" style="animation-delay: .05s" />
+          <circle class="particle" cx="70" cy="10" r="2" style="animation-delay: .08s" />
+        </g>
+
+        <text class="brand-text" x="150" y="55">rnW</text>
+      </svg>
+    </div>
+    <div class="hamburger" onclick="toggleMenu()">
       <div class="bar"></div>
       <div class="bar"></div>
       <div class="bar"></div>
@@ -211,7 +211,7 @@
         </div>
       </div>
     </div>
-    
+
     <div class="footer-bottom">
       <p>Thank you for visiting LernW</p>
     </div>
